--- a/app/src/main/resources/templates/interviews/interviews-list.mustache
+++ b/app/src/main/resources/templates/interviews/interviews-list.mustache
@@ -7,33 +7,33 @@
             <div class="card-body">
                 <h4 class="card-title" style="text-align: center;"></h4>
                 <form name="frmList" method="get">
-                    <input type="hidden" name="targetPage" class="targetPage" value="{{targetPage}}">
-                    <input type="hidden" class="totalPage" value="{{totalPage}}">
-                    <input type="hidden" class="next" value="{{next}}">
+                    <input type="hidden" name="targetPage" class="targetPage" value="{{pageUtils.targetPage}}">
+                    <input type="hidden" class="totalPage" value="{{pageUtils.totalPage}}">
+                    <input type="hidden" class="next" value="{{pageUtils.next}}">
                 </form>
                 <div class="list_button_wrap">
                     <div class="list_paging">
                         <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('1')">
                             <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev10.gif" alt="처음">
                         </a>
-                        <a class="btn_prev" href="javascript:void(0)" onclick="go_targetPage('{{previous}}')">
+                        <a class="btn_prev" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.previous}}')">
                             <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev.gif" alt="이전">
                         </a>
-                        {{#pageNumberList}}
+                        {{#pageUtils.pageNumberList}}
                             <a class="page{{.}}" href="javascript:void(0)" onclick="go_targetPage('{{.}}')">
                                 {{.}}
                             </a>
-                        {{/pageNumberList}}
-                        <a class="btn_next" href="javascript:void(0)" onclick="go_targetPage('{{next}}')">
+                        {{/pageUtils.pageNumberList}}
+                        <a class="btn_next" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.next}}')">
                             <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next.gif" alt="이후">
                         </a>
-                        <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{totalPage}}')">
+                        <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.totalPage}}')">
                             <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next10.gif" alt="마지막">
                         </a>
                     </div>
                 </div>
                 <ul class="list_author_interview">
-                    {{#interviews}}
+                    {{#lists}}
                         <hr>
                         <li>
                             <div class="photo">
@@ -58,24 +58,24 @@
                                 </a>
                             </div>
                         </li>
-                    {{/interviews}}
+                    {{/lists}}
                 </ul>
                 <div class="list_paging">
                     <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('1')">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev10.gif" alt="처음">
                     </a>
-                    <a class="btn_prev" href="javascript:void(0)" onclick="go_targetPage('{{previous}}')">
+                    <a class="btn_prev" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.previous}}')">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev.gif" alt="이전">
                     </a>
-                    {{#pageNumberList}}
+                    {{#pageUtils.pageNumberList}}
                         <a class="page{{.}}" href="javascript:void(0)" onclick="go_targetPage('{{.}}')">
                             {{.}}
                         </a>
-                    {{/pageNumberList}}
-                    <a class="btn_next" href="javascript:void(0)" onclick="go_targetPage('{{next}}')">
+                    {{/pageUtils.pageNumberList}}
+                    <a class="btn_next" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.next}}')">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next.gif" alt="이후">
                     </a>
-                    <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{totalPage}}')">
+                    <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.totalPage}}')">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next10.gif" alt="마지막">
                     </a>
                 </div>
