--- a/app/src/main/resources/templates/users/users-update-password.mustache
+++ b/app/src/main/resources/templates/users/users-update-password.mustache
@@ -31,7 +31,7 @@
             </div>
         </form>
         <a href="/users/update/{{account.id}}" role="button" class="btn btn-secondary">돌아가기</a>
-        <button type="button" class="btn btn-primary" id="btn-account-update-password">수정 완료</button>
+        <button type="button" class="btn btn-primary" id="btn-account-update-password">수정</button>
     </div>
 </div>
 {{>layout/footer}}
