--- a/app/src/main/resources/templates/users/users-update.mustache
+++ b/app/src/main/resources/templates/users/users-update.mustache
@@ -52,7 +52,7 @@
         <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
         <button type="button" class="btn btn-warning" onclick="location.href='/users/update/password/{{account.id}}'">비밀번호 수정</button>
         <button type="button" class="btn btn-primary" id="btn-account-update">수정 완료</button>
-        <button type="button" class="btn btn-danger" id="btn-account-delete">삭제</button>
+        <button type="button" class="btn btn-danger" id="btn-account-delete">탈퇴</button>
     </div>
 </div>
 <script src="/js/app/account.js"></script>
