--- a/app/src/main/resources/templates/users/users-update.mustache
+++ b/app/src/main/resources/templates/users/users-update.mustache
@@ -16,7 +16,7 @@
                         <div class="col-sm-2 imgUp">
                             <div class="imagePreview">
                                 {{#account.uploadFile}}
-                                    <img class="imgPreview" src="/images/{{fileName}}" alt="">
+                                    <img class="imgPreview" src="https://dwhdcf0tf1pjg.cloudfront.net/{{fileName}}" alt="">
                                 {{/account.uploadFile}}
                             </div>
                             <label class="btn btn-primary upload">
