--- a/app/src/main/resources/static/js/app/login.css
+++ b/app/src/main/resources/static/js/app/login.css
@@ -20,7 +20,7 @@ a {
     display: block;
     margin-top: 20px;
 }
-.login input[type=email],
+.login input[type=text],
 .login input[type=password] {
     width: 100%;
     padding: 15px;
