--- a/app/src/main/resources/templates/login.mustache
+++ b/app/src/main/resources/templates/login.mustache
@@ -2,12 +2,20 @@
 <link rel="stylesheet" type="text/css" href="/js/app/login.css">
 
 <div class="login">
-    <span>Email</span>
-    <input type="email" id="email" placeholder="Email Address">
-    <span>Password</span>
-    <input type="password" id="password" placeholder="Password">
-    <p></p>
-    <button id="btn-login">Log in</button>
-</div>
+    <form method="POST" action="/login">
+        <label for="username"><span>Email</span></label>
+        <input type="text"
+               id="username"
+               name="username"
+               placeholder="이메일을 입력하세요">
 
+        <label for="password"><span>Password</span></label>
+        <input type="password"
+               id="password"
+               name="password"
+               placeholder="비밀번호를 입력하세요">
+        <p></p>
+        <button id="btn-login2" type="submit">Log in</button>
+    </form>
+</div>
 {{>layout/footer}}
